--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<!-- modified from Quackit.com -->
+<!-- Template by Quackit.com -->
+<!-- Images by various sources under the Creative Commons CC0 license and/or the Creative Commons Zero license.
+Although you can use them, for a more unique website, replace these images with your own. -->
 <html lang="en">
 <head>
+  <link rel="icon"
+    type="image/png"
+    href="img/brain_icon.png" />
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -82,7 +88,7 @@
                 <p class="lead text-center">Previously, I majored in <a href="https://cogsci.berkeley.edu/" style="color:#6772a3;">Cognitive Science</a> and minored in Bioengineering at UC Berkeley.
                   I was a research associate in the <a href="http://neuroecon.berkeley.edu/" style="color:#6772a3;">Neuroecon Lab</a>, where I worked on several projects focused on aging and decision-making; I completed an honors thesis in the lab in Spring 2020.
                   I also was an <a href="http://www.columbia.edu/cu/biology/ug/amgen/" style="color:#6772a3;">Amgen Scholar</a> at Columbia University, where I studied hippocampal circuits in a model of Alzheimer's disease.
-                  Outside the lab, I was the President of the <a href="https://cssa.berkeley.edu/" style="color:#6772a3;">Cognitive Science Student Association</a> as well as a participant and organizer of the <a href="https://cs-kickstart.berkeley.edu/" style="color:#6772a3;">CS Kickstart</a> program and a <a href="https://eecs.berkeley.edu/cs-scholars" style="color:#6772a3;">CS Scholar</a>.</p>
+                  Outside the lab, I was the President of the <a href="https://cssa.berkeley.edu/" style="color:#6772a3;">Cognitive Science Student Association</a> as well as an alumna and organizer of the <a href="https://cs-kickstart.berkeley.edu/" style="color:#6772a3;">CS Kickstart</a> program and a <a href="https://eecs.berkeley.edu/cs-scholars" style="color:#6772a3;">CS Scholar</a>.</p>
                 <p class="lead text-center">I enjoy spending my free time baking, reading, and hiking.</p>
 
 
