--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Although you can use them, for a more unique website, replace these images with 
 <head>
   <link rel="icon"
     type="image/png"
-    href="img/brain_icon.png" />
+    href="img/icon.png" />
     
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
