--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Although you can use them, for a more unique website, replace these images with 
                 <p class="lead text-center">Previously, I majored in <a href="https://cogsci.berkeley.edu/" style="color:#6772a3;">Cognitive Science</a> and minored in Bioengineering at UC Berkeley.
                   I was a research associate in the <a href="http://neuroecon.berkeley.edu/" style="color:#6772a3;">Neuroecon Lab</a>, where I worked on several projects focused on aging and decision-making; I completed an honors thesis in the lab in Spring 2020.
                   I also was an <a href="http://www.columbia.edu/cu/biology/ug/amgen/" style="color:#6772a3;">Amgen Scholar</a> at Columbia University, where I studied hippocampal circuits in a model of Alzheimer's disease.
-                  Outside the lab, I was the President of the <a href="https://cssa.berkeley.edu/" style="color:#6772a3;">Cognitive Science Student Association</a> as well as an alumna and organizer of the <a href="https://cs-kickstart.berkeley.edu/" style="color:#6772a3;">CS Kickstart</a> program and a <a href="https://eecs.berkeley.edu/cs-scholars" style="color:#6772a3;">CS Scholar</a>.</p>
+                  Outside the lab, I was the President of the <a href="https://cssa.berkeley.edu/" style="color:#6772a3;">Cognitive Science Student Association</a> as well as a participant and organizer of the <a href="https://cs-kickstart.berkeley.edu/" style="color:#6772a3;">CS Kickstart</a> program and a <a href="https://eecs.berkeley.edu/cs-scholars" style="color:#6772a3;">CS Scholar</a>.</p>
                 <p class="lead text-center">I enjoy spending my free time baking, reading, and hiking.</p>
 
 
