--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<!-- Template by Quackit.com -->
-<!-- Images by various sources under the Creative Commons CC0 license and/or the Creative Commons Zero license.
-Although you can use them, for a more unique website, replace these images with your own. -->
+<!-- modified from template by Quackit.com -->
 <html lang="en">
 <head>
   <link rel="icon"
     type="image/png"
     href="img/icon.png" />
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,7 +42,7 @@ Although you can use them, for a more unique website, replace these images with 
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                  <img src="img/brains_logo.png" alt="brain logo" style="width:355px;height:36px;">
+                  <img src="img/brains_logo.png" alt="brain logo" style="width:280px;height:30px;">
                 </a>
             </div>
             <!-- Navbar links -->
@@ -73,6 +71,12 @@ Although you can use them, for a more unique website, replace these images with 
                     </li>
                 </ul>
                 -->
+
+                  <li>
+                      <a href="#contact">contact</a>
+                  </li>
+              </ul>
+
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
     </nav>
@@ -82,8 +86,9 @@ Although you can use them, for a more unique website, replace these images with 
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1 id="intro" class="text-center" style="color:#6772a3;">about me</h1>
-                <img src="img/IMG-2118.JPG" ALIGN="left" class="img-circle" class="mx-auto d-block" alt="me, holding a brain" style="width:255px;height:300px;">
+                <h1 id="about" class="text-center" style="color:#fff;font-size:28px;">. . . me</h1>
+                <h1 id="about" class="text-center" style="color:#6772a3;">about me</h1>
+                <img src="img/IMG-2118.JPG" ALIGN="left" class="img-circle" class="mx-auto d-block" alt="me, holding a brain" style="width:253px;height:300px;max-width:100%;height:auto;">
                 <p class="lead text-center">Hi there! I'm Samira, an incoming PhD student in the <a href="https://neuroscience.berkeley.edu/" style="color:#6772a3;">Helen Wills Neuroscience Institute</a> at UC Berkeley  interested in cognition, aging, &amp; decision-making.</p>
                 <p class="lead text-center">Previously, I majored in <a href="https://cogsci.berkeley.edu/" style="color:#6772a3;">Cognitive Science</a> and minored in Bioengineering at UC Berkeley.
                   I was a research associate in the <a href="http://neuroecon.berkeley.edu/" style="color:#6772a3;">Neuroecon Lab</a>, where I worked on several projects focused on aging and decision-making; I completed an honors thesis in the lab in Spring 2020.
@@ -96,55 +101,84 @@ Although you can use them, for a more unique website, replace these images with 
         </div>
     </div>
 
-    <!-- Promos -->
-    <!--
-	<div class="container-fluid">
-        <div class="row promo">
-        	<a href="#">
-				<div class="col-md-4 promo-item item-1">
-					<h3>
-						Unleash
-					</h3>
-				</div>
-            </a>
-            <a href="#">
-				<div class="col-md-4 promo-item item-2">
-					<h3>
-						Synergize
-					</h3>
-				</div>
-            </a>
-
-			<a href="#">
-				<div class="col-md-4 promo-item item-3">
-					<h3>
-						Procrastinate
-					</h3>
-				</div>
-            </a>
-        </div>
-    </div>  --> <!-- /.container-fluid -->
+    <!-- Photos -->
+  <div class="row">
+    <p></p>
+    <div class="col-sm-2"><p class="lead text-center"> <img src="img/hike.jpg" alt="me hiking" style="width:200px;height:150px;"> </div>
+    <div class="col-sm-2"><p class="lead text-center"> <img src="img/BASF.JPEG" alt="me giving brain anatomy lessons at the Bay Area Science Festival" style="width:200px;height:150px;"> </div>
+    <div class="col-sm-2"><p class="lead text-center"> <img src="img/CSSA_brains.JPG" alt="human brains from a brain anatomy lessons on Berkeley campus" style="width:200px;height:150px;"> </div>
+    <div class="col-sm-2"><p class="lead text-center"> <img src="img/poster_blurred_crop.jpg" alt="me presenting a poster" style="width:200px;height:150px;"> </div>
+    <div class="col-sm-2"><p class="lead text-center"> <img src="img/SURF_talk.JPEG" alt="me giving a talk at the Berkeley SURF conference" style="width:200px;height:150px;"> </div>
+    <div class="col-sm-2"><p class="lead text-center"> <img src="img/brain_atlas.JPEG" alt="a brain atlas" style="width:200px;height:150px;"> </div>
+  </div>
 
 
 
+  <!-- CV section -->
 	<div class="container text-center">
     <h1 id="cv" class="text-center" style="color:#dfe1eb;">. . .</h1>
     <h1 id="cv" class="text-center" style="color:#6772a3;">cv</h1>
 		<!-- <p class="lead">pdf here</p>-->
-
     <p><a class="btn btn-primary" href="https://drive.google.com/file/d/1pWPAKR0bzvNODU5lyq4nLhRWsFeh1Tm-/view?usp=sharing">view as pdf here</a></p>
-	</div><!--/.container-->
+
+    <div style="text-align: left;">
+    <h3>education</h3>
+    <p><b>UC Berkeley, Helen Wills Neuroscience Institute</b>
+    <br>Incoming PhD student, Neuroscience (Fall 2020–)</p>
+    <p><b>UC Berkeley, College of Letters and Sciences</b>
+    <br>B.A. Cognitive Science, Bioengineering Minor (May 2020)</p>
+
+    <h3>awards & honors</h3>
+    <p>UC Berkeley Summer Undergraduate Research Fellow (SURF), L&S Sciences (2019)</p>
+    <p>Diversity Research Award, Scientific Research Network on Decision Neuroscience and Aging (2019)</p>
+    <p>Amgen Scholars Fellowship, Columbia University (2018)</p>
+    <p>The Leadership Award, Cal Alumni Association (2016, 2019)</p>
+
+    <h3>research</h3>
+    <p><b>Neuroecon Lab</b>, UC Berkeley (2018-2020)
+    <br>Principal investigator: Prof. Ming Hsu
+      <ul>
+        <li>Honors thesis: developing a method for quantifying and visualizing categorical time series data, applied to semantic fluency datasets to track Alzheimer's disease diagnosis</li>
+        <li>Analyzing effects of aging and dementia on memory-based decision making (Mentor: Dr. Zhihao Zhang)</li>
+        <li>Designing and implementing a paradigm to analyze prosocial behavior and decision making in rodent models (in collaboration with Prof. Daniela Kaufer, UC Berkeley Integrative Biology)</li>
+      </ul></p>
+    <p><b>Dranovsky Lab</b>, Columbia University (2018-2020)
+    <br>Amgen Scholars Fellowship.
+    <br>Effects of Alzheimer’s Disease and early life stress on hippocampal circuitry in mice</p>
+    <p><b>Adesnik Lab</b>, UC Berkeley (2017-2018)</p>
+
+    <h3>publications & presentations</h3>
+    <p>S Maboudian, Z Zhang, & M Hsu. Visualizing Verbal Recall Using Recurrence Plots. <i>Honors thesis; Manuscript in preparation. </i></p>
+    <p>S Maboudian, Z Zhang, & M Hsu. Semantic Fluency Visualization to Improve Characterization of Memory Deficits in Dementia. <i>(Poster). 2019 Aging Research and Technology Summit, UC Berkeley.</i></p>
+    <p>S Maboudian, J Cardenas, & A Dranovsky. Effects of Alzheimer’s Disease on the Cholinergic Septohippocampal Projection. <i>Report prepared for the Amgen Foundation, 2018.</i></p>
+    <p>Semantic Fluency Visualization to Improve Characterization of Memory Deficits in Dementia. Oral Presentation. SURF 2019 Conference, UC Berkeley. 2019.</p>
+    <p>Septohippocampal Circuit Connectivity in Early Alzheimer’s Disease. Oral Presentation. Cognitive Neuroscience Graduate Colloquium, UC Berkeley. 2018.</p>
+    <p>Septohippocampal Circuit Connectivity in Early Alzheimer’s Disease. Oral Presentation. Columbia University, Amgen Scholars program. 2018.</p>
+
+    <h3>outreach & teaching</h3>
+    <p><b>Cognitive Science Student Association (CSSA),</b> President (2019-2020); Vice President (2018-2019); Secretary (2017-2018)
+      <br>CSSA outreach program:
+      <ul>
+        <li><a href="https://www.crscience.org/educators/BASIS" style="color:#6772a3;">Bay Area Scientists in Schools (BASIS)</a>: brain anatomy and brain/mental health lessons in local elementary schools</li>
+        <li><a href="http://www.bayareasciencefestival.org/" style="color:#6772a3;">Bay Area Science Festival (BASF)</a> Discovery Days exhibitor
+              (as part of <a href="https://scienceatcal.berkeley.edu" style="color:#6772a3;">Science at Cal</a>): neuroanatomy lessons and demonstrations </li>
+        </ul><p>
+    <p><b>CS Kickstart,</b> participant (2016) and organizer (2017)</p>
+    <p><b>Lab Teaching Assistant</b>, Data 8: Foundations of Data Science (2017)</p>
+    </div>
+
+  </div><!--/.container-->
 
 
-	<!-- Footer -->
+	<!-- Footer: Contact -->
 	<footer>
-    <h1 id="cv" class="text-center" style="color:#dfe1eb;">. . .</h1>
+    <h1 id="contact" class="text-center" style="color:#dfe1eb;">. . .</h1>
 		<h1 class="text-center" style="color:#6772a3;">contact</h1>
 		<!-- Map -->
 
 			<div class="container">
 
-						<p class="lead text-center" style="font-size:18px;"><span class="glyphicon glyphicon-envelope"></span> smaboudian at berkeley dot edu</p>
+						<p class="lead text-center" style="font-size:18px;color:#6772a3;"><span class="glyphicon glyphicon-envelope"></span> smaboudian at berkeley dot edu</p>
             <p class="lead text-center"> <img src="img/twittericon.png" alt="brain logo" style="width:20px;height:20px;"> <a href="https://twitter.com/samiramabs" style="color:#6772a3;font-size:18px;">@samiramabs</a></p>
 
       </div>
