fixed typo in hike image

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!-- Photos -->
   <div class="row">
     <p></p>
-    <div class="col-sm-2"><p class="lead text-center"> <img src="img/hike.jpg" alt="me hiking" style="width:200px;height:150px;"> </div>
+    <div class="col-sm-2"><p class="lead text-center"> <img src="img/hike.JPG" alt="me hiking" style="width:200px;height:150px;"> </div>
     <div class="col-sm-2"><p class="lead text-center"> <img src="img/BASF.JPEG" alt="me giving brain anatomy lessons at the Bay Area Science Festival" style="width:200px;height:150px;"> </div>
     <div class="col-sm-2"><p class="lead text-center"> <img src="img/CSSA_brains.JPG" alt="human brains from a brain anatomy lessons on Berkeley campus" style="width:200px;height:150px;"> </div>
     <div class="col-sm-2"><p class="lead text-center"> <img src="img/poster_blurred_crop.jpg" alt="me presenting a poster" style="width:200px;height:150px;"> </div>
