--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               (as part of <a href="https://scienceatcal.berkeley.edu" style="color:#6772a3;">Science at Cal</a>): neuroanatomy lessons and demonstrations </li>
         </ul><p>
     <p><b>CS Kickstart,</b> participant (2016) and organizer (2017)</p>
-    <p><b>Lab Teaching Assistant</b>, Data 8: Foundations of Data Science (2017)</p>
+    <p><b>Lab Teaching Assistant</b>, Data 8: Foundations of Data Science, UC Berkeley (2017)</p>
     </div>
 
   </div><!--/.container-->
