changed link hover colors, added linkedin

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
     <link href="css/custom.css" rel="stylesheet">
+    <!-- colors used: #6772a3 dark purple, #dd845a orange-ish, #dfe1eb light purple -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -87,12 +88,12 @@
             <div class="col-xs-12">
                 <h1 id="about" class="text-center" style="color:#fff;font-size:1px;">. . . me</h1>
                 <img src="img/IMG-2118.JPG" ALIGN="left" class="img-circle" class="mx-auto d-block" alt="me, holding a brain" style="width:253px;height:300px;max-width:100%;height:auto;">
-                <h1 id="about" class="text-center" style="color:#6772a3;">about me</h1>
-                <p class="lead text-center">Hi there! I'm Samira, an incoming PhD student in the <a href="https://neuroscience.berkeley.edu/" style="color:#6772a3;">Helen Wills Neuroscience Institute</a> at UC Berkeley  interested in cognition, aging, &amp; decision-making.</p>
-                <p class="lead text-center">Previously, I majored in <a href="https://cogsci.berkeley.edu/" style="color:#6772a3;">Cognitive Science</a> and minored in Bioengineering at UC Berkeley.
-                  I was a research associate in the <a href="http://neuroecon.berkeley.edu/" style="color:#6772a3;">Neuroecon Lab</a>, where I worked on several projects focused on aging and decision-making; I completed an honors thesis in the lab in Spring 2020.
-                  I also was an <a href="http://www.columbia.edu/cu/biology/ug/amgen/" style="color:#6772a3;">Amgen Scholar</a> at Columbia University, where I studied hippocampal circuits in a model of Alzheimer's disease.
-                  Outside the lab, I was the President of the <a href="https://cssa.berkeley.edu/" style="color:#6772a3;">Cognitive Science Student Association</a> as well as a participant and organizer of the <a href="https://cs-kickstart.berkeley.edu/" style="color:#6772a3;">CS Kickstart</a> program and a <a href="https://eecs.berkeley.edu/cs-scholars" style="color:#6772a3;">CS Scholar</a>.</p>
+                <h1 id="about" class="text-center">about me</h1>
+                <p class="lead text-center">Hi there! I'm Samira, an incoming PhD student in the <a href="https://neuroscience.berkeley.edu/">Helen Wills Neuroscience Institute</a> at UC Berkeley  interested in cognition, aging, &amp; decision-making.</p>
+                <p class="lead text-center">Previously, I majored in <a href="https://cogsci.berkeley.edu/">Cognitive Science</a> and minored in Bioengineering at UC Berkeley.
+                  I was a research associate in the <a href="http://neuroecon.berkeley.edu/">Neuroecon Lab</a>, where I worked on several projects focused on aging and decision-making; I completed an honors thesis in the lab in Spring 2020.
+                  I also was an <a href="http://www.columbia.edu/cu/biology/ug/amgen/">Amgen Scholar</a> at Columbia University, where I studied hippocampal circuits in a model of Alzheimer's disease.
+                  Outside the lab, I was the President of the <a href="https://cssa.berkeley.edu/">Cognitive Science Student Association</a> as well as a participant and organizer of the <a href="https://cs-kickstart.berkeley.edu/">CS Kickstart</a> program and a <a href="https://eecs.berkeley.edu/cs-scholars">CS Scholar</a>.</p>
                 <p class="lead text-center">I enjoy spending my free time baking, reading, and hiking.</p>
 
 
@@ -116,7 +117,7 @@
   <!-- CV section -->
 	<div class="container text-center">
     <h1 id="cv" class="text-center" style="color:#dfe1eb;">. . .</h1>
-    <h1 id="cv" class="text-center" style="color:#6772a3;">cv</h1>
+    <h1 id="cv" class="text-center">cv</h1>
 		<!-- <p class="lead">pdf here</p>-->
     <p><a class="btn btn-primary" href="https://drive.google.com/file/d/1pWPAKR0bzvNODU5lyq4nLhRWsFeh1Tm-/view?usp=sharing">view as pdf here</a></p>
 
@@ -158,9 +159,9 @@
     <p><b>Cognitive Science Student Association (CSSA),</b> President (2019-2020); Vice President (2018-2019); Secretary (2017-2018)
       <br>CSSA outreach program:
       <ul>
-        <li><a href="https://www.crscience.org/educators/BASIS" style="color:#6772a3;">Bay Area Scientists in Schools (BASIS)</a>: brain anatomy and brain/mental health lessons in local elementary schools</li>
-        <li><a href="http://www.bayareasciencefestival.org/" style="color:#6772a3;">Bay Area Science Festival (BASF)</a> Discovery Days exhibitor
-              (as part of <a href="https://scienceatcal.berkeley.edu" style="color:#6772a3;">Science at Cal</a>): neuroanatomy lessons and demonstrations </li>
+        <li><a href="https://www.crscience.org/educators/BASIS">Bay Area Scientists in Schools (BASIS)</a>: brain anatomy and brain/mental health lessons in local elementary schools</li>
+        <li><a href="http://www.bayareasciencefestival.org/">Bay Area Science Festival (BASF)</a> Discovery Days exhibitor
+              (as part of <a href="https://scienceatcal.berkeley.edu">Science at Cal</a>): neuroanatomy lessons and demonstrations </li>
         </ul><p>
     <p><b>CS Kickstart,</b> participant (2016) and organizer (2017)</p>
     <p><b>Lab Teaching Assistant</b>, Data 8: Foundations of Data Science, UC Berkeley (2017)</p>
@@ -172,13 +173,16 @@
 	<!-- Footer: Contact -->
 	<footer>
     <h1 id="contact" class="text-center" style="color:#dfe1eb;">. . .</h1>
-		<h1 class="text-center" style="color:#6772a3;">contact</h1>
+		<h1 class="text-center">contact</h1>
 		<!-- Map -->
 
 			<div class="container">
 
-						<p class="lead text-center" style="font-size:18px;color:#6772a3;"><span class="glyphicon glyphicon-envelope"></span> smaboudian at berkeley dot edu</p>
-            <p class="lead text-center"> <img src="img/twittericon.png" alt="brain logo" style="width:20px;height:20px;"> <a href="https://twitter.com/samiramabs" style="color:#6772a3;font-size:18px;">@samiramabs</a></p>
+						<p class="lead text-center" style="font-size:18px;color:#6772a3;"><span class="glyphicon glyphicon-envelope"></span> smaboudian at berkeley dot edu
+            <br class="lead text-center"> <a href="https://twitter.com/samiramabs" style="font-size:18px;"><img src="img/twittericon.png" alt="twitter: @samiramabs" style="width:20px;height:20px;"></a>
+            <a href="https://www.linkedin.com/in/samira-maboudian/" style="font-size:18px;"><img src="img/linkedin_icon.png" alt="linkedin: linkedin.com/in/samira-maboudian" style="width:20px;height:20px;"></a>
+
+            </p>
 
       </div>
 
