fix email formatting

--- a/index.html
+++ b/index.html
@@ -89,13 +89,14 @@
                 <h1 id="about" class="text-center" style="color:#fff;font-size:1px;">. . . me</h1>
                 <img src="img/IMG-2118.JPG" ALIGN="left" class="img-circle" class="mx-auto d-block" alt="me, holding a brain" style="width:253px;height:300px;max-width:100%;height:auto;">
                 <h1 id="about" class="text-center">about me</h1>
+                <div style="text-align: center;">
                 <p class="lead text-center">Hi there! I'm Samira, an incoming PhD student in the <a href="https://neuroscience.berkeley.edu/">Helen Wills Neuroscience Institute</a> at UC Berkeley  interested in cognition, aging, &amp; decision-making.</p>
                 <p class="lead text-center">Previously, I majored in <a href="https://cogsci.berkeley.edu/">Cognitive Science</a> and minored in Bioengineering at UC Berkeley.
                   I was a research associate in the <a href="http://neuroecon.berkeley.edu/">Neuroecon Lab</a>, where I worked on several projects focused on aging and decision-making; I completed an honors thesis in the lab in Spring 2020.
                   I also was an <a href="http://www.columbia.edu/cu/biology/ug/amgen/">Amgen Scholar</a> at Columbia University, where I studied hippocampal circuits in a model of Alzheimer's disease.
                   Outside the lab, I was the President of the <a href="https://cssa.berkeley.edu/">Cognitive Science Student Association</a> as well as a participant and organizer of the <a href="https://cs-kickstart.berkeley.edu/">CS Kickstart</a> program and a <a href="https://eecs.berkeley.edu/cs-scholars">CS Scholar</a>.</p>
                 <p class="lead text-center">I enjoy spending my free time baking, reading, and hiking.</p>
-
+              </div>
 
             </div>
         </div>
@@ -178,7 +179,7 @@
 
 			<div class="container">
 
-						<p class="lead text-center" style="font-size:18px;color:#6772a3;"><span class="glyphicon glyphicon-envelope"></span> smaboudian at berkeley dot edu
+						<p class="lead text-center" style="font-size:18px;color:#6772a3;"><span class="glyphicon glyphicon-envelope"></span> : smaboudian at berkeley dot edu
             <br class="lead text-center"> <a href="https://twitter.com/samiramabs" style="font-size:18px;"><img src="img/twittericon.png" alt="twitter: @samiramabs" style="width:20px;height:20px;"></a>
             <a href="https://www.linkedin.com/in/samira-maboudian/" style="font-size:18px;"><img src="img/linkedin_icon.png" alt="linkedin: linkedin.com/in/samira-maboudian" style="width:20px;height:20px;"></a>
 
