--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <p><b>UC Berkeley, College of Letters and Sciences</b>
     <br>B.A. Cognitive Science, Bioengineering Minor (May 2020)</p>
 
-    <h3>awards & honors</h3>
+    <h3>awards &amp; honors</h3>
     <p>UC Berkeley Summer Undergraduate Research Fellow (SURF), L&S Sciences (2019)</p>
     <p>Diversity Research Award, Scientific Research Network on Decision Neuroscience and Aging (2019)</p>
     <p>Amgen Scholars Fellowship, Columbia University (2018)</p>
@@ -140,7 +140,7 @@
     <br>Principal investigator: Prof. Ming Hsu
       <ul>
         <li>Honors thesis: developing a method for quantifying and visualizing categorical time series data, applied to semantic fluency datasets to track Alzheimer's disease diagnosis</li>
-        <li>Analyzing effects of aging and dementia on memory-based decision making (Mentor: Dr. Zhihao Zhang)</li>
+        <li>Analyzing effects of aging and dementia on memory-based decision making (Mentor: Dr. Zhihao Zhang; collaboration with Prof. Winston Chiong, UCSF Memory &amp; Aging Center)</li>
         <li>Designing and implementing a paradigm to analyze prosocial behavior and decision making in rodent models (in collaboration with Prof. Daniela Kaufer, UC Berkeley Integrative Biology)</li>
       </ul></p>
     <p><b>Dranovsky Lab</b>, Columbia University (2018-2020)
@@ -148,15 +148,15 @@
     <br>Effects of Alzheimer’s Disease and early life stress on hippocampal circuitry in mice</p>
     <p><b>Adesnik Lab</b>, UC Berkeley (2017-2018)</p>
 
-    <h3>publications & presentations</h3>
-    <p>S Maboudian, Z Zhang, & M Hsu. Visualizing Verbal Recall Using Recurrence Plots. <i>Honors thesis; Manuscript in preparation. </i></p>
-    <p>S Maboudian, Z Zhang, & M Hsu. Semantic Fluency Visualization to Improve Characterization of Memory Deficits in Dementia. <i>(Poster). 2019 Aging Research and Technology Summit, UC Berkeley.</i></p>
-    <p>S Maboudian, J Cardenas, & A Dranovsky. Effects of Alzheimer’s Disease on the Cholinergic Septohippocampal Projection. <i>Report prepared for the Amgen Foundation, 2018.</i></p>
+    <h3>publications &amp; presentations</h3>
+    <p>S Maboudian, Z Zhang, &amp; M Hsu. Visualizing Verbal Recall Using Recurrence Plots. <i>Honors thesis; Manuscript in preparation. </i></p>
+    <p>S Maboudian, Z Zhang, &amp; M Hsu. Semantic Fluency Visualization to Improve Characterization of Memory Deficits in Dementia. <i>(Poster). 2019 Aging Research and Technology Summit, UC Berkeley.</i></p>
+    <p>S Maboudian, J Cardenas, &amp; A Dranovsky. Effects of Alzheimer’s Disease on the Cholinergic Septohippocampal Projection. <i>Report prepared for the Amgen Foundation, 2018.</i></p>
     <p>Semantic Fluency Visualization to Improve Characterization of Memory Deficits in Dementia. Oral Presentation. SURF 2019 Conference, UC Berkeley. 2019.</p>
     <p>Septohippocampal Circuit Connectivity in Early Alzheimer’s Disease. Oral Presentation. Cognitive Neuroscience Graduate Colloquium, UC Berkeley. 2018.</p>
     <p>Septohippocampal Circuit Connectivity in Early Alzheimer’s Disease. Oral Presentation. Columbia University, Amgen Scholars program. 2018.</p>
 
-    <h3>outreach & teaching</h3>
+    <h3>outreach &amp; teaching</h3>
     <p><b>Cognitive Science Student Association (CSSA),</b> President (2019-2020); Vice President (2018-2019); Secretary (2017-2018)
       <br>CSSA outreach program:
       <ul>
