modify menu bar and fix typose

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
     <link href="css/custom.css" rel="stylesheet">
-    <!-- colors used: #6772a3 dark purple, #dd845a orange-ish, #dfe1eb light purple -->
+    <!-- colors used: #6772a3 dark purple, #dd845a orange-ish (#de9d7e lighter orange), #dfe1eb light purple , #a0522d; burnt sienna-->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -50,13 +50,13 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#about">about</a>
+                        <a href="#about"><b>about</b></a>
                     </li>
                     <li>
-                        <a href="#cv">cv</a>
+                        <a href="#cv"><b>cv</b></a>
                     </li>
                     <li>
-                        <a href="#contact">contact</a>
+                        <a href="#contact"><b>contact</b></a>
                     </li>
           <!-- dropdown menu within navbar link -->
           <!--
@@ -86,16 +86,16 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1 id="about" class="text-center" style="color:#fff;font-size:1px;">. . . me</h1>
+                <h1 id="about" class="text-center" style="color:#fff;">. . .</h1>
                 <img src="img/IMG-2118.JPG" ALIGN="left" class="img-circle" class="mx-auto d-block" alt="me, holding a brain" style="width:253px;height:300px;max-width:100%;height:auto;">
-                <h1 id="about" class="text-center">about me</h1>
+                <h1 class="text-center">about me</h1>
                 <div style="text-align: center;">
                 <p class="lead text-center">Hi there! I'm Samira, an incoming PhD student in the <a href="https://neuroscience.berkeley.edu/">Helen Wills Neuroscience Institute</a> at UC Berkeley  interested in cognition, aging, &amp; decision-making.</p>
                 <p class="lead text-center">Previously, I majored in <a href="https://cogsci.berkeley.edu/">Cognitive Science</a> and minored in Bioengineering at UC Berkeley.
                   I was a research associate in the <a href="http://neuroecon.berkeley.edu/">Neuroecon Lab</a>, where I worked on several projects focused on aging and decision-making; I completed an honors thesis in the lab in Spring 2020.
                   I also was an <a href="http://www.columbia.edu/cu/biology/ug/amgen/">Amgen Scholar</a> at Columbia University, where I studied hippocampal circuits in a model of Alzheimer's disease.
                   Outside the lab, I was the President of the <a href="https://cssa.berkeley.edu/">Cognitive Science Student Association</a> as well as a participant and organizer of the <a href="https://cs-kickstart.berkeley.edu/">CS Kickstart</a> program and a <a href="https://eecs.berkeley.edu/cs-scholars">CS Scholar</a>.</p>
-                <p class="lead text-center">I enjoy spending my free time baking, reading, and hiking.</p>
+                <p class="lead text-center">I enjoy spending my free time baking, painting, reading, and hiking.</p>
               </div>
 
             </div>
