--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <h1 id="cv" class="text-center" style="color:#dfe1eb;">. . .</h1>
     <h1 id="cv" class="text-center">cv</h1>
 		<!-- <p class="lead">pdf here</p>-->
-    <p><a class="btn btn-primary" href="https://drive.google.com/file/d/1pWPAKR0bzvNODU5lyq4nLhRWsFeh1Tm-/view?usp=sharing">view as pdf here</a></p>
+    <p><a class="btn btn-primary" href="https://drive.google.com/file/d/1weuceRheS0GnBEUrWNbyMztvLYKh7s3A/view?usp=sharing">view cv as pdf here</a></p>
 
     <div style="text-align: left;">
     <h3>education</h3>
@@ -130,10 +130,11 @@
     <br>B.A. Cognitive Science, Bioengineering Minor (May 2020)</p>
 
     <h3>awards &amp; honors</h3>
-    <p>UC Berkeley Summer Undergraduate Research Fellow (SURF), L&S Sciences (2019)</p>
-    <p>Diversity Research Award, Scientific Research Network on Decision Neuroscience and Aging (2019)</p>
-    <p>Amgen Scholars Fellowship, Columbia University (2018)</p>
-    <p>The Leadership Award, Cal Alumni Association (2016, 2019)</p>
+    <p><b>Departmental Citation Award</b>, UC Berkeley Cognitive Science: represents the highest achievement by a graduating senior in the Cognitive Science Department (2020)</p>
+    <p><b>Summer Undergraduate Research Fellowship (SURF)</b>, UC Berkeley L&S Sciences (2019)</p>
+    <p><b>Diversity Research Award</b>, Scientific Research Network on Decision Neuroscience and Aging (2019)</p>
+    <p><b>Amgen Scholars Fellowship</b>, Columbia University (2018)</p>
+    <p><b>The Leadership Award</b>, Cal Alumni Association (2016, 2019): merit-based scholarship recognizing undergraduate students who demonstrate innovative, initiative-driven leadership</p>
 
     <h3>research</h3>
     <p><b>Neuroecon Lab</b>, UC Berkeley (2018-2020)
@@ -180,8 +181,9 @@
 			<div class="container">
 
 						<p class="lead text-center" style="font-size:18px;color:#6772a3;"><span class="glyphicon glyphicon-envelope"></span> : smaboudian at berkeley dot edu
-            <br class="lead text-center"> <a href="https://twitter.com/samiramabs" style="font-size:18px;"><img src="img/twittericon.png" alt="twitter: @samiramabs" style="width:20px;height:20px;"></a>
-            <a href="https://www.linkedin.com/in/samira-maboudian/" style="font-size:18px;"><img src="img/linkedin_icon.png" alt="linkedin: linkedin.com/in/samira-maboudian" style="width:20px;height:20px;"></a>
+            <br class="lead text-center">
+            <a href="https://twitter.com/samiramabs" style="font-size:18px;"><img src="img/twittericon.png" alt="twitter: @samiramabs" style="width:30px;height:30px;"></a>
+              <a href="https://www.linkedin.com/in/samira-maboudian/" style="font-size:18px;"><img src="img/linkedin_icon.png" alt="linkedin: linkedin.com/in/samira-maboudian" style="width:30px;height:30px;"></a>
 
             </p>
 
